syntax = "proto3";

package stroppy;

import "config.proto";
import "google/protobuf/empty.proto";
import "runtime.proto";

option go_package = "github.com/stroppy-io/stroppy/pkg/core/proto";

enum Status {
    STATUS_UNSPECIFIED = 0;
    STATUS_PENDING = 1;
    STATUS_RUNNING = 2;
    STATUS_COMPLETED = 3;
    STATUS_FAILED = 4;
}

message StroppyStepRun {
    string id = 1;
    string stroppy_run_id = 2;
    StepContext context = 3;
    Status status = 4;
}

message StroppyRun {
    string id = 1;
    Status status = 2;
    ConfigFile config = 3;
    string cmd = 4;
    repeated string requested_step = 5;
}


service CloudStatusService {
    rpc NotifyRun (StroppyRun) returns (google.protobuf.Empty);
    rpc NotifyStep (StroppyStepRun) returns (google.protobuf.Empty);
}